<resources>
    <string name="app_name">Espresso Automation Sample</string>
    <!-- Login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="error_invalid_credentials">Invalid credentials</string>
    
    <!-- Items -->
    <string name="header_items">Items</string>
    
    <!-- Detail -->
    <string name="action_save">Save</string>
    <string name="hint_notes">Notes</string>
    <string name="favorite">Favorite</string>
</resources>
